# consolidated-python-modules-test

./: README.md
.teamcity/: pom.xml  settings.kts
py-mod-1/: pyproject.toml
py-mod-2/: pyproject.toml
