[tool.poetry]
name = "py-mod-2"
version = "0.1.0"
description = "Test module 2"
authors = ["Chris Howell <cacen.mawr@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
